# fully-homomorphic-encryption

./: .bazelrc  .gitignore  BUILD  CONTRIBUTING.md  Dockerfile  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  requirements.txt  rottenbuild
.github/workflows/: build_and_test.yml
bazel/: BUILD  add_config_core_openfhe.patch  cereal.BUILD  openfhe.BUILD  rapidjson.BUILD
cloud/: README.md  core.py  provision.py  requirements.txt  tool
cloud/examples/: jaxite_example.py  noop.py
docker/: debian-bullseye.Dockerfile  ubuntu-jammy.Dockerfile
fpga/: README.md
patches/: 0001-Fetch-YOSYS_DATDIR-from-the-environment.patch  BUILD  abc.BUILD  nlohmann_json.BUILD  openfhe.BUILD  palisade.BUILD  tfhe.BUILD  xls-visibility-file.patch  xls-visibility-ir.patch  xls-visibility-logging.patch  xls-visibility-status.patch  xls.diff  xls_pyyaml.patch  xls_repo.diff  xls_visibility.diff  yosys.BUILD
transpiler/: BUILD  README.md  abstract_xls_runner.h  abstract_xls_transpiler.h  cc_transpiler.cc  cc_transpiler.h  cc_transpiler_test.cc  cleartext_transpiler.cc  cleartext_transpiler.h  cleartext_transpiler_test.cc  common_runner.cc  common_runner.h  common_transpiler.cc  common_transpiler.h  fhe.bzl  fhe_common.bzl  fhe_demo.bzl  fhe_structs.bzl  fhe_xls.bzl  fhe_yosys.bzl  graph.h  graph_test.cc  interpreted_openfhe_transpiler.cc  interpreted_openfhe_transpiler.h  interpreted_palisade_transpiler.cc  interpreted_palisade_transpiler.h  interpreted_tfhe_transpiler.cc  interpreted_tfhe_transpiler.h  metadata_utils.cc  metadata_utils.h  metadata_utils_test.cc  netlist_utils.cc  netlist_utils.h  netlist_utils_test.cc  openfhe_runner.cc  openfhe_runner.h  openfhe_transpiler.cc  openfhe_transpiler.h  palisade_cells.liberty  palisade_runner.cc  (+29 more)
transpiler/benchmarks/: BUILD  add_char.cc  add_int.cc  arithmetic_openfhe.cc  arithmetic_palisade.cc  arithmetic_tfhe.cc
transpiler/codelab/: add.cc  add.h  add_openfhe_fhe_demo.cc  (+1 more)
(+373 files in other folders)
